# baalbek

./: CLAUDE.md  README.md  pyproject.toml
examples/: demo_cli.py
src/baalbek/: __init__.py  app.py  baalbek.tcss  db.py  introspect.py  mise_app.py  mise_introspect.py  modes.py  runner.py  schemas.py
src/baalbek/screens/: commander.py  delimiter_modal.py  mise_commander.py  output_zoom.py  parameter_edit.py  quit_confirm.py
src/baalbek/widgets/: breadcrumbs.py  command_list.py  history_list.py  miller.py  option_form.py  output_viewer.py  parameter_list.py  run_panel.py  search_bar.py
tests/: conftest.py  test_app.py  test_breadcrumbs.py  test_command_list.py  test_commander.py  test_db.py  test_delimiter_modal.py  test_e2e.py  test_execution.py  test_fuzzy_search.py  test_history_integration.py  test_history_widgets.py  test_introspect.py  test_miller.py  test_mise_commander.py  test_mise_introspect.py  test_modes.py  test_option_form.py  test_parameter_list.py  test_run_panel.py  test_runner.py  test_schemas.py  test_search_bar.py
