[project]
name = "baalbek"
version = "0.2.12"
description = "Miller column TUI explorer for Click CLI apps"
readme = "README.md"
authors = [
    { name = "Michael Katsevman", email = "michael@opennotes.ai" }
]
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.3.1",
    "pyte>=0.8.2",
    "textual>=8.0.2",
]

[project.urls]
Repository = "https://github.com/anateus/baalbek"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "textual-dev>=1.8.0",
]
